Sim Sharing: Under the "Advanced" controls: Wire resistivity - Instrument as done for the other sliders, i.e. need start drag, drag (time limited), and end drag.
Sim Sharing: Send messages when switches are opened or closed
Sim Sharing: Voltmeter - value thresholding so that sim sharing messages are only sent when the readout seen by the user changes
Sim Sharing: Time limit current messages from ammeters
Sim Sharing: Time limit voltage messages from voltmeter
Sim Sharing: Made the log voltage match the voltmeter voltage by rounding to the same number of digits
Sim Sharing: Send messages when voltage/resistance editor window activated/deactivated/closed
Sim Sharing: Made the model ID match the user ID for sim sharing messages from the series ammeter.
Sim Sharing: Improved value thresholding for series ammeter so that sim sharing messages are only sent when the readout seen by the user changes.
# 3.20.09 (72232) Feb 20, 2013
2/20/13 Deploy to dev for review with UBC researchers.
Sim Sharing: Added instance id to battery current messages.
Sim Sharing: Added message rate limiting to battery current messages.
Sim Sharing: send grab bag item message, see #3497
Sim Sharing: send message when grab bag button pressed, see #3497
Sim Sharing: send message about connections to ammeter, see #3497
Sim Sharing: send message about connections to voltmeter probes, see #3497
Sim Sharing: send startDrag/endDrag for resistance/voltage sliders, see #3497
Sim Sharing: send startDrag/endDrag for voltmeter leads, see #3497
Sim Sharing: send startDrag/endDrag for non-contact ammeter, see #3497
Sim Sharing: renamed "ammeter" => "nonContactAmmeter"
Renamed VirtualAmmeterNode => NonContactAmmeterNode
Sim Sharing: Added messages for moving the ammeter probe (limit to every 500ms), see #3497
Sim Sharing: Added messages for moving the voltmeter probe nodes (limit to every 500ms), see #3497
Sim Sharing: Added messages for all components on the control panel